[FIX] website: make focus visible on accordions
This commit brings back focused state to `.accordions`

`.o_website_offcanvas` may be visible on desktop too, so we removed the
piece of code that was preventing the focus state in this specific case

task-3607520

--- a/addons/website/static/src/scss/bootstrap_overridden.scss
+++ b/addons/website/static/src/scss/bootstrap_overridden.scss
@@ -307,7 +307,6 @@ $accordion-border-width: 1px !default;
 $accordion-border-color: $border-color !default;
 $accordion-button-active-bg: $light !default;
 $accordion-button-active-color: color-contrast($light) !default;
-$accordion-button-focus-box-shadow: none !default;
 $accordion-icon-color: $body-color !default;
 $accordion-icon-active-color: $accordion-button-active-color !default;
 
